--- a/teste-javascript/aula-01/package.json
+++ b/teste-javascript/aula-01/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "teste-parte-exemplo2",
+  "name": "aula-01",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
